syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/okeefem2/simple_bank/pb";

message UpdateUserRequest {
  // Numbers 1-15 take only 1 byte to encode
  // larger numbers require >= 2 bytes
  string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  // Numbers 1-15 take only 1 byte to encode
  // larger numbers require >= 2 bytes
  User user = 1;
}
